loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:6: error: not found: value cpt
        cpt+=1
        ^Poucet2:9: error: not found: value cpt
    if (cpt >= 3){
        ^Poucet2:14: error: not found: value cpt
    cpt=0
    ^