loopdowhile.Poucet2.scala.code
do{
  avance();
  while(!crossing()){
      avance();
      if (estSurBiscuit()){
        cpt+=1
      }
    }
  	if (cpt >= 3){
      gauche()
    } else {
      droite()
    }
  	cpt=0
} while(!sortieTrouvee());